--- a/css/image-puzzle.css
+++ b/css/image-puzzle.css
@@ -1,15 +1,16 @@
 ﻿#collage hr{
     border:none;
-    border-top:2px solid #f5f2f2;
+    border-top:2px ridge #f5f2f2;
     height:1px;
 }
 
 #collage #playPanel {
     background-color:#c2defc;
     padding:10px 0px;
-    margin: 10px auto;
+    margin: 50px auto;
     max-width:800px;
     width:95%;
+    border: 5px outset white;
 }
 
 #collage #actualImageBox {
@@ -34,13 +35,13 @@
 }
 
 #collage img#actualImage{
-    border:2px solid #a46;
+    border:2px solid white;
     height:280px;
     width:280px;
 }
 
 #collage #sortable {
-    border:2px solid #a46;
+    border:2px solid white;
     list-style-type: none;
     display: inline-block;
     margin: 10px;
